bug 22031; enabling raster (bitmap) fonts on Windows, e.g. for UI; r=rods,rbs